--- a/templates/add_customer.html
+++ b/templates/add_customer.html
@@ -10,7 +10,7 @@
         <!-- jquery validation -->
         <div class="card card-primary">
           <div class="card-header">
-            <h3 class="card-title">Customer Details</h3>
+            <h3 class="card-title">Add New Customer Details</h3>
           </div>
           <!-- /.card-header -->
           <!-- form start -->
