--- a/templates/index.html
+++ b/templates/index.html
@@ -1,147 +1,172 @@
-<!-- Section: Design Block -->
-{% load static %}
-
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>GMS</title>
-  </head>
-  <body>
-   {% block content %}
-
-<section class="background-radial-gradient overflow-hidden">
+{% extends 'base.html' %}
 
 
-   {% endblock %}
+{% block content %}
 
-  <style>
+    <div class="m-3">
+        <div class="row">
+           <div class="col-md-12">
+               <div class="card card-success">
+                    <div class="card-header">
+                        <h2 class="">Welcome to VSMS</h2>
+                    </div>
 
-    .background-radial-gradient {
-      background-color: hsl(220, 21%, 89%);
-      background-image: url("{% static 'lamboss.webp' %}");
-      background-repeat: no-repeat;
-      overflow: hidden;
-      background-size: cover;
-    }
+                    <!--Show cards with stats-->
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-primary">
+                                    <span class="info-box-icon"><i class="fa fa-users"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Total Customers</span>
+                                        <span class="info-box-number">19</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-success">
+                                    <span class="info-box-icon"><i class="fa fa-user-plus"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">New Customers</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-danger">
+                                    <span class="info-box-icon"><i class="fa fa-user-times"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Deleted Customers</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-    #radius-shape-1 {
-      height: 220px;
-      width: 220px;
-      top: -60px;
-      left: -130px;
-      background: radial-gradient(#07006b, #ad1fff);
-      overflow: hidden;
-    }
+                        <!--FOr vendors-->
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-primary">
+                                    <span class="info-box-icon"><i class="fa fa-users"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Total Vendors</span>
+                                        <span class="info-box-number">19</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-success">
+                                    <span class="info-box-icon"><i class="fa fa-user-plus"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">New Vendors</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-danger">
+                                    <span class="info-box-icon"><i class="fa fa-user-times"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Deleted Vendors</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
 
-    #radius-shape-2 {
-      border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
-      bottom: -60px;
-      right: -110px;
-      width: 300px;
-      height: 300px;
-      background: radial-gradient(#44006b, #ad1fff);
-      overflow: hidden;
-    }
+                            <!--FOr products-->
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-primary">
+                                    <span class="info-box-icon"><i class="fa fa-box"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Total Products</span>
+                                        <span class="info-box-number">19</span>
+                                    </div>
+                                </div>
+                            </div>
 
-    .bg-glass {
-      background-color: hsla(240, 4%, 56%, 0.992) !important;
-      backdrop-filter: saturate(100%) blur(10%);
-    }
-  </style>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-success">
+                                    <span class="info-box-icon"><i class="fa fa-plus"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">New Products</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-danger">
+                                    <span class="info-box-icon"><i class="fa fa-minus"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Deleted Products</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
 
-  <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
-    <div class="row gx-lg-5 align-items-center mb-5">
-      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-        <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(220, 46%, 51%)">
-          Vehicle Service<br />
-          <span style="color: hsl(218, 58%, 60%)">Management System</span>
-        </h1>
-        <p class="mb-4 opacity-70" style="color: hsl(210, 93%, 95%)">
-          A Web-Based Automobile Service Software
-        </p>
-      </div>
+                            <!--FOr Services-->
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-primary">
+                                    <span class="info-box-icon"><i class="fa fa-wrench"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Total Services</span>
+                                        <span class="info-box-number">19</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-success">
+                                    <span class="info-box-icon"><i class="fa fa-plus"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">New Services</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-danger">
+                                    <span class="info-box-icon"><i class="fa fa-minus"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Deleted Services</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
 
-      <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
-<!--        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>-->
-<!--        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>-->
+                            <!--FOr Sales-->
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-primary">
+                                    <span class="info-box-icon"><i class="fa fa-book"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Total Sales</span>
+                                        <span class="info-box-number">19</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-success">
+                                    <span class="info-box-icon"><i class="fa fa-plus"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">New Sales</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="info-box m-3 p-3 bg-danger">
+                                    <span class="info-box-icon"><i class="fa fa-minus"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Deleted Sales</span>
+                                        <span class="info-box-number">2</span>
+                                    </div>
+                                </div>
+                            </div>
 
-        <div class="card bg-glass" style="opacity:90%;">
-          <div class="card-body px-4 py-5 px-md-5">
-            <form>
-              <!-- Email input -->
-              <div class="form-outline mb-4">
-                    <label class="form-label" for="form3Example3">Email Address</label>
-                    <input type="email" id="form3Example3" class="form-control" />
+                    </div>
+                           
 
-              </div>
-
-              <!-- Password input -->
-              <div class="form-outline mb-4">
-
-                <label class="form-label" for="form3Example4">Password</label>
-                 <input type="password" id="form3Example4" class="form-control" />
-              </div>
-
-              <!-- Checkbox -->
-              <div class="form-check d-flex justify-content-center mb-6" style="padding-top: 20px;">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-                <label class="form-check-label" for="form2Example33">
-                  Remember Me
-                </label>
-              </div>
-
-              <div class="col-md-12 d-flex justify-content-center" style="padding-top: 20px;">
-                <!-- Simple link -->
-                <a href="#!">Forgot Password?</a>
-              </div>
-            </div>
-              <!-- Submit button -->
-              <button type="submit" class="btn btn-primary btn-block mb-4" style="width: 50%; margin-left: 26%;margin-top: -20px;">
-                <a href="{% url 'base' %}" class="text-white decoration-none" style="text-decoration: none;">Login</a>
-              </button>
-
-              <!-- Register buttons -->
-              <div class="text-center">
-                <p>Or Login With:</p>
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-facebook-f"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-google"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-twitter"></i>
-                </button>
-              </div>
-            </form>
-          </div>
+               </div>
+           </div>
         </div>
-      </div>
     </div>
-  </div>
-</section>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
-
-<!-- Section: Design Block -->
+{% endblock %}
